--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  cloud_firestore: ^3.4.6
+  flutter_slidable: ^2.0.0
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
